$Id: ChangeLog,v 1.385 2007/07/09 16:24:32 olereinhardt Exp $

2007-07-09  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* net/Makefile:	Commented in igmp_in.c and igmp_out.c again 
        * net/ipin.c: igmp support reenabled

2007-07-09  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* dev/twbbif.c: Added default TWI_DELAY for avr architecture 
        to allow in-tree compilation
	* net/Makefile:	Commented out igmp support as long as it does 
        not exists to allow in-tree compilation
        * net/ipin.c: Commented out igmp support as long as it does not compile

2007-08-06  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* arch/arm/init/crtat91sam7x256_rom.S: 
        Corrected inlude path names. Changed backslash to slash

2007-06-14  Matthias Ringwald <mringwal@inf.ethz.ch>
	* include/sys/thread.c, arch/avr/os/nutinit.c: NutThreadSetSleepMode
	now returns previous sleep mode
    
	* arch/avr/os/nutinit.c: Disable ADC and buskeeper during idle thread
	sleep, if IDLE_THREAD_ADC_OFF and IDLE_THREAD_BUSKEEPER_OFF are defined.
     
2007-06-01  Harald Kipp  <harald.kipp@egnite.de>

	* app/caltime/caltime.c, app/caltime/Makefile, app/Makefile:
	New application sample demonstrates calendar functions.

	* conf/ethernut30d.conf: Rev-D boards failed to work with latest
	Nut/OS release.

	* crt/time.c: Bug #1724015 fixed. Thanks to Andreas Helmcke.
	Simplified code in time().

	* dev/x12rtc.c: Automatic detection of X1226 or X1286. Fixed
	wrong century determination for X1226. Debugging output added.

	* include/dev/board.h: RTC_CHIP definition now visible for
	ETHERNUT3 and MMNET02 only. 

	* include/dev/x12rtc.h: Wrong watchdog mode bit fixed.


2007-05-24  Harald Kipp  <harald.kipp@egnite.de>

	* arch/avr/dev/irblast.c, include/dev/irblast.h: New driver from 
	Przemyslaw Rudy sends modulated infrared remote control codes 
	using a simple IR LED. Cool.


2007-05-23  Harald Kipp  <harald.kipp@egnite.de>

	* arch/avr/dev/ace.c: Added two more interfaces. Thanks to